--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: search_field_autocomplete
-description: A Flutter package that provides a customizable search field with autocomplete suggestions. It is designed to make it easy to implement autocomplete functionality in your Flutter applications.
+description:  customizable search field with autocomplete suggestions.
 version: 0.0.2
 homepage: https://github.com/Abbas1Hussein/search_field_autocomplete
 
